--- a/files/var/www/app/Templates/index.twig
+++ b/files/var/www/app/Templates/index.twig
@@ -2,4 +2,9 @@
 
 {% block content %}
 Wellcome to Cloud OS
+
+<div>
+{% if jwt %}{{ dump(jwt) }}{% else %}no jwt{% endif %}
+</div>
+
 {% endblock %}
