--- a/files/var/www/html/app/Templates/index.twig
+++ b/files/var/www/html/app/Templates/index.twig
@@ -3,8 +3,37 @@
 {% block content %}
 Wellcome to Cloud OS
 
-<div>
-{% if jwt %}{{ dump(jwt) }}{% else %}no jwt{% endif %}
+<style>
+.app_menu{
+	padding-top: 10px;
+}
+.app_menu__row{
+	padding-bottom: 5px;
+}
+</style>
+
+<br/>
+<br/>
+<b>Menu</b>
+
+<ul class="app_menu">
+	{% for route in routes %}
+		{% if route.route_prefix != "/" and
+			route.route_prefix != ""
+		%}
+		<li class="app_menu__row">
+			<a href="{{ route.route_prefix }}">
+				{{ route.docker_name }}
+			</a>
+		</li>
+		{% endif %}
+	{% endfor %}
+</ul>
+
+<div class="app_menu__logout">
+	<a href="/logout">
+		Logout
+	</a>
 </div>
 
 {% endblock %}
