login, logout fix

--- a/files/var/www/html/app/Templates/index.twig
+++ b/files/var/www/html/app/Templates/index.twig
@@ -1,7 +1,7 @@
 {% extends "@app/layout.twig" %}
 
 {% block content %}
-Wellcome to Cloud OS
+Hello {{ jwt.login }}. Wellcome to Cloud OS !!!
 
 <style>
 .app_menu{
